--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,8 @@ body {
   width: 100%;
   background-color: #e7001d;
   font-family: 'Noto Sans', sans-serif;
+  position: relative;
+  height: 9em;
 }
 
 nav {
@@ -57,4 +59,57 @@ p {
 
 h1, h2 {
   font-family: 'Noto Sans', sans-serif;
+  padding: 0;
+  margin: 0;
+}
+
+.dragon {
+  background-color: #e4c22a;
+  width: 100%;
+}
+
+.goat {
+  background-color: black;
+  width: 100%;
+}
+
+.rooster {
+  background-color: #e7001d;
+  width: 100%;
+}
+
+.ox {
+  background-color: #e4c22a;
+  width: 100%;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+footer {
+  background-color: black;
+  text-align: center;
+  width: 100%;
+  padding: 1.5em;
+}
+
+.footer {
+  color: white;
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 0.75em;
+}
+
+.medallion {
+  width: 6em;
+  left: 35%;
+  position: absolute;
+  display: block;
+}
+
+.symbols {
+  color: white;
+  font-size: 2.5em;
+  text-align: center;
 }
