--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body {
   background-color: #e7001d;
   font-family: 'Noto Sans', sans-serif;
   position: relative;
-  height: 9em;
+  text-align: center;
 }
 
 nav {
@@ -112,9 +112,6 @@ footer {
 
 .medallion {
   width: 6em;
-  left: 35%;
-  position: absolute;
-  top: 20%;
 }
 
 .symbols {
@@ -122,8 +119,9 @@ footer {
   font-size: 3em;
   text-align: center;
   position: absolute;
-  left: 35%;
-  top: 18%;
+  width: 100%;
+  left: 0%;
+  top: 8%;
   text-shadow: 2px 2px black;
 }
 
@@ -131,12 +129,14 @@ footer {
   color: white;
   font-size: 1em;
   position: absolute;
-  left: 32%;
+  width: 100%;
+  left: 0%;
   top: 65%;
   text-shadow: 2px 2px black;
 }
 
 .banner {
+  text-align: center;
   position: relative;
 }
 
@@ -146,11 +146,11 @@ footer {
 
 .banner-title {
   color: white;
-  position: absolute;
-  left: 35%;
-  bottom: 10%;
+  width: 100%;
   text-shadow: 2px 2px black;
   font-style: italic;
+  position: absolute;
+  bottom: 20px;
 }
 
 .text {
